<resources>
    <string name="app_name" translatable="false">Sky Pay</string>
    <string name="menu_action_settings_title">Settings</string>
    <string name="phone_allowed_digits" translatable="false">0123456789 +-()</string>
    <string name="account_allowed_digits" translatable="false">0123456789</string>
    <string name="home">Home</string>
    <string name="transactions">Transactions</string>
    <string name="profile">Profile</string>
    <string name="menu_action_scanner_title">Scanner</string>
    <string name="registration">Registration</string>
    <string name="menu_action_filter_title">Filter</string>
    <string name="make_number_transaction">по номеру счета</string>
    <string name="make_qr_transaction">по QR-коду</string>
    <string name="menu_action_notifications_title">Notifications</string>
    <string name="enter_account_number">Введите номер счета</string>
    <string name="btn_continue">Продолжить</string>
    <string name="enter_phone_number">Введите номер телефона</string>
    <string name="profile_item_my_data">Мои данные</string>
    <string name="profile_item_safety">Безопасность</string>
    <string name="profile_item_settings">Настройки</string>
    <string name="profile_item_support">Служба поддержки</string>
    <string name="menu_action_qr_title">Show QR</string>
    <string name="camera_access_denied_title">Доступ к камере запрещен</string>
    <string name="camera_access_denied_description">Вы запретили доступ к камере, разрешите его в настройках</string>
    <string name="go_to_settings">Перейти в настройки</string>
    <string name="acc_delete_disclaimer">Чтобы отказаться от услуг, вы можете \nудалить аккаунт</string>
    <string name="logout">Выйти из аккаунта</string>
    <string name="acc_delete">удалить аккаунт</string>
    <string name="forgot_pass">Забыли пароль?</string>
    <string name="confirmation">Подтверждение</string>
    <string name="recovery_password">Восстановление пароля</string>
    <string name="account_placeholder" translatable="false">XX XX XXX XXX</string>
    <string name="make_transaction">Перевести</string>
    <string name="confirmation_disclaimer">Введите последние 4 цифры\nвходящего номера</string>
    <string name="logout_button_pin">ВЫЙТИ</string>
    <string name="account_details">Детали счета</string>
    <string name="top_up">Пополнить</string>
    <string name="withdraw">Вывести</string>
    <string name="more">Еще</string>
    <string name="transaction">Перевести</string>
    <string name="suspend">Заморозить</string>
    <string name="close">Заблокировать</string>
    <string name="my_qr">Мой QR</string>
    <string name="account_number_placeholder_censored">Номер счета ** ** *** %s</string>
    <string name="credentials">Реквизиты</string>
    <string name="qr_code">QR-код</string>
    <string name="qr_code_description">Для переводов</string>
    <string name="link">Ссылка</string>
    <string name="send_qr">Отправить</string>
    <string name="enter_message">Введите сообщение</string>
    <string name="account_number_placeholder">"Номер счёта %s"</string>
    <string name="enter_password">Введите пароль</string>
    <string name="password">Пароль</string>
    <string name="password_repeat">Пароль повторно</string>
    <string name="username">Имя пользователя</string>
    <string name="enter_pusername">Введите имя</string>
    <string name="settings_phone">Номер телефона</string>
</resources>