<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/ft_appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/ft_toolbar"
            style="@style/Toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/background"
            app:title="Авторизация"
            app:titleTextColor="@color/white_soft" />
    </com.google.android.material.appbar.AppBarLayout>

    <TextView
        android:id="@+id/fpt_title"
        style="@style/Callout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/password"
        android:textColor="@color/white_soft"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ft_appbar" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/ft_mcv_pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="12dp"
        app:cardBackgroundColor="@color/background_deep"
        app:cardCornerRadius="12dp"
        app:cardElevation="0dp"
        app:layout_constraintTop_toBottomOf="@id/fpt_title">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ft_et_pass"
            style="@style/Callout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:hint="@string/enter_password"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:maxLines="1"
            android:paddingHorizontal="24dp"
            android:paddingVertical="12dp"
            android:textColor="@color/white_soft"
            android:textColorHint="@color/gray" />

    </com.google.android.material.card.MaterialCardView>

    <TextView
        android:id="@+id/forgot_password"
        style="@style/Footnote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/forgot_pass"
        android:textColor="@color/gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ft_mcv_pass" />

    <ru.kozlovsky.pay.presentation.view.PrimaryButton
        android:id="@+id/ft_btn_continue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:text="@string/btn_continue">

    </ru.kozlovsky.pay.presentation.view.PrimaryButton>

</androidx.constraintlayout.widget.ConstraintLayout>