<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <SurfaceView
        android:id="@+id/fs_surface"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/fs_lottie_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:scaleX="0.75"
        android:scaleY="0.75" />

    <ImageView
        android:id="@+id/fs_iv_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|start"
        android:layout_margin="16dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:clickable="true"
        android:focusable="true"
        android:padding="8dp"
        android:src="@drawable/ic_close"
        app:tint="@color/white_soft" />

    <LinearLayout
        android:id="@+id/fs_ll_disclaimer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center_horizontal"
        android:layout_marginHorizontal="32dp"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/fs_tv_disclaimer"
            style="@style/Headline1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:text="@string/camera_access_denied_title" />

        <TextView
            android:id="@+id/fs_tv_disclaimer_description"
            style="@style/Footnote"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:gravity="center_horizontal"
            android:text="@string/camera_access_denied_description" />

        <TextView
            android:id="@+id/fh_tv_go_to_settings"
            style="@style/Callout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:text="@string/go_to_settings"
            android:textColor="@color/blue_accent"
            android:textStyle="bold" />
    </LinearLayout>
</FrameLayout>