<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/ft_appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/ft_toolbar"
            style="@style/Toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/background"
            app:menu="@menu/menu_account_details"
            app:title="@string/account_details" />
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/fad_account_name"
            style="@style/Headline1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="Основной счет"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/fad_account_balance"
            style="@style/Title2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="1312"
            app:layout_constraintEnd_toEndOf="@id/fad_account_name"
            app:layout_constraintStart_toStartOf="@id/fad_account_name"
            app:layout_constraintTop_toBottomOf="@id/fad_account_name" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/fad_mcv_actions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="40dp"
            app:cardBackgroundColor="@color/background_deep"
            app:cardCornerRadius="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/fad_account_balance">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/fad_top_up"
                    style="@style/Callout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="?attr/selectableItemBackground"
                    android:clickable="true"
                    android:drawablePadding="8dp"
                    android:focusable="true"
                    android:gravity="center"
                    android:paddingVertical="16dp"
                    android:text="@string/top_up"
                    android:textColor="@color/blue_accent"
                    app:drawableTint="@color/blue_accent"
                    app:drawableTopCompat="@drawable/ic_top_up" />

                <TextView
                    android:id="@+id/fad_withdraw"
                    style="@style/Callout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="?attr/selectableItemBackground"
                    android:clickable="true"
                    android:drawablePadding="8dp"
                    android:focusable="true"
                    android:gravity="center"
                    android:paddingVertical="16dp"
                    android:text="@string/withdraw"
                    android:textColor="@color/blue_accent"
                    app:drawableTint="@color/blue_accent"
                    app:drawableTopCompat="@drawable/ic_withdraw" />

                <TextView
                    android:id="@+id/fad_make_transaction"
                    style="@style/Callout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="?attr/selectableItemBackground"
                    android:clickable="true"
                    android:drawablePadding="8dp"
                    android:focusable="true"
                    android:gravity="center"
                    android:paddingVertical="16dp"
                    android:text="@string/transaction"
                    android:textColor="@color/blue_accent"
                    app:drawableTint="@color/blue_accent"
                    app:drawableTopCompat="@drawable/ic_transaction" />

            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <include
            android:id="@+id/fad_mcv_credentials"
            layout="@layout/item_credentials"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@id/fad_mcv_actions" />

        <include
            android:id="@+id/fad_mcv_qr_code"
            layout="@layout/item_credentials"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="4dp"
            app:layout_constraintEnd_toStartOf="@id/fad_mcv_link"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/fad_mcv_credentials" />

        <include
            android:id="@+id/fad_mcv_link"
            layout="@layout/item_credentials"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/fad_mcv_qr_code"
            app:layout_constraintTop_toBottomOf="@id/fad_mcv_credentials" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>